--- a/Natours/starter/sass/layout/_navigation.scss
+++ b/Natours/starter/sass/layout/_navigation.scss
@@ -46,6 +46,7 @@
     transform: translateX(-100rem);
 
     opacity: 0;
+    visibility: hidden;
     transition: all 0.8s cubic-bezier(0.68, -0.6, 0.32, 1.6);
   }
 
@@ -100,6 +101,7 @@
 
   &__checkbox:checked ~ &__nav {
     opacity: 1;
+    visibility: visible;
     transform: translateX(0);
   }
 
